fix: improve German translations and button color logic in exchange trade page

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -782,8 +782,8 @@
   "send_error_minimum_value": "Der Mindestbetrag ist 0,01",
   "send_estimated_fee": "Geschätzte Gebühr:",
   "send_fee": "Gebühr:",
-  "send_from_cake_wallet": "Senden Sie aus Kuchenbrieftasche",
-  "send_from_external_wallet": "Senden Sie aus der Außenschreibe",
+  "send_from_cake_wallet": "Aus Cake Wallet senden",
+  "send_from_external_wallet": "Aus externer Wallet senden",
   "send_name": "Name",
   "send_new": "Neu",
   "send_payjoin": "Payjoin senden",
