fix: Add more nodes for AutoSwitching
This change:
- Enables more nodes across wallet types for auto switching
- Modifies CTA for checkbox
- Renames flags to fit

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -308,6 +308,7 @@
   "enable": "يُمكَِن",
   "enable_auto_node_switching": "تمكين تبديل العقدة التلقائية",
   "enable_builtin_tor": "تمكين بنيت في تور",
+  "enable_for_auto_switching": "تمكين للتبديل التلقائي",
   "enable_mempool_api": "MEMPOOL API للحصول على رسوم وتواريخ دقيقة",
   "enable_replace_by_fee": "تمكين الاستبدال",
   "enable_silent_payments_scanning": "ابدأ في مسح المدفوعات الصامتة ، حتى يتم الوصول إلى الطرف",
@@ -998,7 +999,6 @@
   "transport_type": "نوع النقل",
   "trongrid_history": "تاريخ ترونغريد",
   "trusted": "موثوق به",
-  "trusted_for_auto_switching": "موثوق بها للتبديل التلقائي",
   "try_again": "حاول ثانية",
   "tx_commit_exception_no_dust_on_change": "يتم رفض المعاملة مع هذا المبلغ. باستخدام هذه العملات المعدنية ، يمكنك إرسال ${min} دون تغيير أو ${max} الذي يعيد التغيير.",
   "tx_commit_failed": "فشل ارتكاب المعاملة. يرجى الاتصال بالدعم.",
