--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -308,6 +308,7 @@
   "enable": "Активиране",
   "enable_auto_node_switching": "Активиране на автоматично превключване на възли",
   "enable_builtin_tor": "Активирайте вграден Tor",
+  "enable_for_auto_switching": "Активирайте за автоматично превключване",
   "enable_mempool_api": "Mempool API за точни такси и дати",
   "enable_replace_by_fee": "Активиране на замяна по забрана",
   "enable_silent_payments_scanning": "Започнете да сканирате безшумните плащания, докато се достигне съветът",
@@ -998,7 +999,6 @@
   "transport_type": "Тип транспорт",
   "trongrid_history": "Trongrid History",
   "trusted": "Надежден",
-  "trusted_for_auto_switching": "Надежден за автоматично превключване",
   "try_again": "Опитайте отново",
   "tx_commit_exception_no_dust_on_change": "Сделката се отхвърля с тази сума. С тези монети можете да изпратите ${min} без промяна или ${max}, която връща промяна.",
   "tx_commit_failed": "Компетацията на транзакцията не успя. Моля, свържете се с поддръжката.",
