--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -308,6 +308,7 @@
   "enable": "Umožnit",
   "enable_auto_node_switching": "Povolit automatické přepínání uzlů",
   "enable_builtin_tor": "Povolte vestavěné tor",
+  "enable_for_auto_switching": "Povolit automatické přepínání",
   "enable_mempool_api": "Mempool API pro přesné poplatky a data",
   "enable_replace_by_fee": "Povolit výměnu podle poplatku",
   "enable_silent_payments_scanning": "Začněte skenovat tiché platby, dokud není dosaženo špičky",
@@ -998,7 +999,6 @@
   "transport_type": "Typ transportu",
   "trongrid_history": "Trongridní historie",
   "trusted": "Důvěřovat",
-  "trusted_for_auto_switching": "Důvěryhodné pro automatické přepínání",
   "try_again": "Zkuste to znovu",
   "tx_commit_exception_no_dust_on_change": "Transakce je zamítnuta s touto částkou. S těmito mincemi můžete odeslat ${min} bez změny nebo ${max}, které se vrátí změna.",
   "tx_commit_failed": "Transakce COMPORT selhala. Kontaktujte prosím podporu.",
