--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -308,6 +308,7 @@
   "enable": "Aktivieren",
   "enable_auto_node_switching": "Aktivieren Sie die automatische Knotenschaltung",
   "enable_builtin_tor": "Aktivieren Sie den bau-in tor",
+  "enable_for_auto_switching": "Aktivieren Sie die automatische Schaltung",
   "enable_mempool_api": "Mempool-API für genaue Gebühren und Daten",
   "enable_replace_by_fee": "Aktivieren Sie Ersatz für Fee",
   "enable_silent_payments_scanning": "Scannen Sie nach Silent Payments ihrer Adresse",
@@ -999,7 +1000,6 @@
   "transport_type": "Transporttyp",
   "trongrid_history": "Trongrid-Historie",
   "trusted": "Vertrauenswürdige",
-  "trusted_for_auto_switching": "Vertraut auf automatische Schaltung",
   "try_again": "Erneut versuchen",
   "tx_commit_exception_no_dust_on_change": "Die Transaktion wird diesen Betrag abgelehnt. Mit diesen Münzen können Sie ${min} ohne Veränderung oder ${max} senden, die Änderungen zurückgeben.",
   "tx_commit_failed": "Transaktionsausschüsse ist fehlgeschlagen. Bitte wenden Sie sich an Support.",
