--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -308,6 +308,7 @@
   "enable": "Enable",
   "enable_auto_node_switching": "Enable Automatic Node Switching",
   "enable_builtin_tor": "Enable built-in Tor",
+  "enable_for_auto_switching": "Enable for Auto-Switching",
   "enable_mempool_api": "Mempool API for accurate fees and dates",
   "enable_replace_by_fee": "Enable Replace-By-Fee",
   "enable_silent_payments_scanning": "Start scanning for transactions sent to your Silent Payment address.",
@@ -999,7 +1000,6 @@
   "transport_type": "Transport Type",
   "trongrid_history": "TronGrid history",
   "trusted": "Trusted",
-  "trusted_for_auto_switching": "Trusted for Auto-Switching",
   "try_again": "Try again",
   "tx_commit_exception_no_dust_on_change": "The transaction is rejected with this amount. With these coins you can send ${min} without change or ${max} that returns change.",
   "tx_commit_failed": "Transaction commit failed. Please contact support.",
