--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -308,6 +308,7 @@
   "enable": "Permitir",
   "enable_auto_node_switching": "Habilitar la conmutación de nodo automático",
   "enable_builtin_tor": "Habilitar Tor incorporado",
+  "enable_for_auto_switching": "Habilitar para el cambio automático",
   "enable_mempool_api": "API de Mempool para tarifas y fechas precisas",
   "enable_replace_by_fee": "Habilitar reemplazar por tarea",
   "enable_silent_payments_scanning": "Comienza a escanear pagos silenciosos, hasta que se alcance la altura actual",
@@ -999,7 +1000,6 @@
   "transport_type": "Tipo de transporte",
   "trongrid_history": "Historia trongrid",
   "trusted": "de confianza",
-  "trusted_for_auto_switching": "Confianza para la conmutación automática",
   "try_again": "Intentar otra vez",
   "tx_commit_exception_no_dust_on_change": "La transacción se rechaza con esta cantidad. Con estas monedas puede enviar ${min} sin cambios o ${max} que devuelve el cambio.",
   "tx_commit_failed": "La confirmación de transacción falló. Ponte en contacto con el soporte.",
