--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -308,6 +308,7 @@
   "enable": "Activer",
   "enable_auto_node_switching": "Activer la commutation automatique du nœud",
   "enable_builtin_tor": "Activer le Tor construit",
+  "enable_for_auto_switching": "Activer pour le commutation automatique",
   "enable_mempool_api": "API Mempool pour les frais et dates précis",
   "enable_replace_by_fee": "Activer Remplace-by-Fee",
   "enable_silent_payments_scanning": "Commencez à analyser les transactions envoyées à votre adresse de paiement silencieux.",
@@ -998,7 +999,6 @@
   "transport_type": "Type de transport",
   "trongrid_history": "Histoire de la trongride",
   "trusted": "de confiance",
-  "trusted_for_auto_switching": "Confiance pour le commutation automatique",
   "try_again": "Essayer à nouveau",
   "tx_commit_exception_no_dust_on_change": "La transaction est rejetée avec ce montant. Avec ces pièces, vous pouvez envoyer ${min} sans changement ou ${max} qui renvoie le changement.",
   "tx_commit_failed": "La validation de la transaction a échoué. Veuillez contacter l'assistance.",
