--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -308,6 +308,7 @@
   "enable": "Ba dama",
   "enable_auto_node_switching": "Yana ba da damar kunna kumburi ta atomatik",
   "enable_builtin_tor": "Sanya riguna-inf",
+  "enable_for_auto_switching": "Kunna don sauyawa na atomatik",
   "enable_mempool_api": "Mampool API don ingantattun kudade da kwanakin",
   "enable_replace_by_fee": "Ba da damar maye gurbin-by-kudin",
   "enable_silent_payments_scanning": "Fara bincika biya na shiru, har sai tip ɗin ya kai",
@@ -1000,7 +1001,6 @@
   "transport_type": "Nau'in sufuri",
   "trongrid_history": "Tarihin Trongrid",
   "trusted": "Amintacce",
-  "trusted_for_auto_switching": "Amintacce don sauyawa",
   "try_again": "Gwada kuma",
   "tx_commit_exception_no_dust_on_change": "An ƙi ma'amala da wannan adadin. Tare da waɗannan tsabar kudi Zaka iya aika ${min}, ba tare da canji ba ko ${max} wanda ya dawo canzawa.",
   "tx_commit_failed": "Ma'amala ya kasa. Da fatan za a tuntuɓi goyan baya.",
