--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -308,6 +308,7 @@
   "enable": "सक्षम",
   "enable_auto_node_switching": "स्वचालित नोड स्विचिंग सक्षम करें",
   "enable_builtin_tor": "बिल्ट-इन टोर को सक्षम करें",
+  "enable_for_auto_switching": "ऑटो-स्विचिंग के लिए सक्षम करें",
   "enable_mempool_api": "सटीक शुल्क और तिथियों के लिए मेमपूल एपीआई",
   "enable_replace_by_fee": "प्रतिस्थापित-दर-शुल्क सक्षम करें",
   "enable_silent_payments_scanning": "मूक भुगतान स्कैनिंग सक्षम करें",
@@ -1000,7 +1001,6 @@
   "transport_type": "परिवहन प्रकार",
   "trongrid_history": "ट्रॉन्ग्रिड का इतिहास",
   "trusted": "भरोसा",
-  "trusted_for_auto_switching": "ऑटो-स्विचिंग के लिए विश्वसनीय",
   "try_again": "पुनः प्रयास करें",
   "tx_commit_exception_no_dust_on_change": "लेनदेन को इस राशि से खारिज कर दिया जाता है। इन सिक्कों के साथ आप चेंज या ${min} के बिना ${max} को भेज सकते हैं जो परिवर्तन लौटाता है।",
   "tx_commit_failed": "लेन -देन प्रतिबद्ध विफल। कृपया संपर्क समर्थन करें।",
