--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -308,6 +308,7 @@
   "enable": "Omogućiti",
   "enable_auto_node_switching": "Omogući automatsko prebacivanje čvorova",
   "enable_builtin_tor": "Omogućite ugrađeni u tor",
+  "enable_for_auto_switching": "Omogućite automatsko prebacivanje",
   "enable_mempool_api": "Mempool API za točne naknade i datume",
   "enable_replace_by_fee": "Omogući zamjenu",
   "enable_silent_payments_scanning": "Započnite skeniranje tihih plaćanja, dok se ne postigne savjet",
@@ -998,7 +999,6 @@
   "transport_type": "Transportni tip",
   "trongrid_history": "Povijest Trongrida",
   "trusted": "vjerovao",
-  "trusted_for_auto_switching": "Pouzdan za automatsko prebacivanje",
   "try_again": "Pokušajte ponovo",
   "tx_commit_exception_no_dust_on_change": "Transakcija se odbija s tim iznosom. Pomoću ovih kovanica možete poslati ${min} bez promjene ili ${max} koja vraća promjenu.",
   "tx_commit_failed": "Obveza transakcije nije uspjela. Molimo kontaktirajte podršku.",
