--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -308,6 +308,7 @@
   "enable": "Միացնել",
   "enable_auto_node_switching": "Միացնել ավտոմատ հանգույցի անջատումը",
   "enable_builtin_tor": "Միացրեք ներկառուցված ջահը",
+  "enable_for_auto_switching": "Միացնել ավտոմատ անջատումը",
   "enable_mempool_api": "Mempool API ճշգրիտ վճարների եւ ամսաթվերի համար",
   "enable_replace_by_fee": "Միացնել փոխարինումը միջնորդավճարով",
   "enable_silent_payments_scanning": "Միացնել Լուռ Վճարումների սկանավորումը",
@@ -996,7 +997,6 @@
   "transport_type": "Տրանսպորտի տեսակը",
   "trongrid_history": "TronGrid պատմություն",
   "trusted": "Վստահելի",
-  "trusted_for_auto_switching": "Վստահելի է ավտոմատ անջատման համար",
   "try_again": "Կրկին փորձեք",
   "tx_commit_exception_no_dust_on_change": "Փոխանցումը մերժվել է այս գումարով: Այս արժույթներով կարող եք ուղարկել ${min} առանց փոփոխության կամ ${max} որը վերադարձնում է փոփոխությունը",
   "tx_commit_failed": "Փոխանցումը ձախողվել է: Խնդրում ենք դիմել աջակցությանը",
