--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -308,6 +308,7 @@
   "enable": "Memungkinkan",
   "enable_auto_node_switching": "Aktifkan switching simpul otomatis",
   "enable_builtin_tor": "Aktifkan built-in tor",
+  "enable_for_auto_switching": "Aktifkan untuk pengalihan otomatis",
   "enable_mempool_api": "API Mempool untuk biaya dan tanggal yang akurat",
   "enable_replace_by_fee": "Aktifkan ganti-by-fee",
   "enable_silent_payments_scanning": "Mulailah memindai pembayaran diam, sampai ujung tercapai",
@@ -1001,7 +1002,6 @@
   "transport_type": "Jenis transportasi",
   "trongrid_history": "Sejarah Trongrid",
   "trusted": "Dipercayai",
-  "trusted_for_auto_switching": "Dipercaya untuk pengalihan otomatis",
   "try_again": "Coba lagi",
   "tx_commit_exception_no_dust_on_change": "Transaksi ditolak dengan jumlah ini. Dengan koin ini Anda dapat mengirim ${min} tanpa perubahan atau ${max} yang mengembalikan perubahan.",
   "tx_commit_failed": "Transaksi Gagal. Silakan hubungi Dukungan.",
