--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -308,6 +308,7 @@
   "enable": "Abilita",
   "enable_auto_node_switching": "Abilita la commutazione del nodo automatico",
   "enable_builtin_tor": "Abilita buildi-in tor",
+  "enable_for_auto_switching": "Abilita per il cambio automatico",
   "enable_mempool_api": "API Mempool per commissioni e date accurate",
   "enable_replace_by_fee": "Abilita Replace-By-Fee",
   "enable_silent_payments_scanning": "Inizia a scansionare le transazioni inviate al tuo indirizzo Silent Payments",
@@ -999,7 +1000,6 @@
   "transport_type": "Tipo di trasporto",
   "trongrid_history": "Cronologia TronGrid",
   "trusted": "Fidato",
-  "trusted_for_auto_switching": "Fiducia per il cambio automatico",
   "try_again": "Riprova",
   "tx_commit_exception_no_dust_on_change": "La transazione viene respinta con questo importo. Con queste monete è possibile inviare ${min} senza modifiche o ${max} che restituisce il cambiamento.",
   "tx_commit_failed": "Commit di transazione non riuscita. Si prega di contattare il supporto.",
