--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -308,6 +308,7 @@
   "enable": "有効にする",
   "enable_auto_node_switching": "自動ノードスイッチングを有効にします",
   "enable_builtin_tor": "組み込みのTORを有効にします",
+  "enable_for_auto_switching": "自動スイッチを有効にします",
   "enable_mempool_api": "正確な料金と日付のMempool API",
   "enable_replace_by_fee": "交換ごとに有効にします",
   "enable_silent_payments_scanning": "先端に達するまで、サイレント決済のスキャンを開始します",
@@ -999,7 +1000,6 @@
   "transport_type": "輸送タイプ",
   "trongrid_history": "トロンリッドの歴史",
   "trusted": "信頼できる",
-  "trusted_for_auto_switching": "自動スイッチの信頼",
   "try_again": "もう一度やり直してください",
   "tx_commit_exception_no_dust_on_change": "この金額ではトランザクションは拒否されます。 これらのコインを使用すると、おつりなしの ${min} またはおつりを返す ${max} を送信できます。",
   "tx_commit_failed": "トランザクションコミットは失敗しました。サポートに連絡してください。",
