--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -308,6 +308,7 @@
   "enable": "활성화",
   "enable_auto_node_switching": "자동 노드 스위칭을 활성화합니다",
   "enable_builtin_tor": "내장 Tor를 활성화하십시오",
+  "enable_for_auto_switching": "자동 전환을 가능하게합니다",
   "enable_mempool_api": "정확한 수수료 및 날짜를 위한 Mempool API",
   "enable_replace_by_fee": "RBF(Replace-By-Fee) 활성화",
   "enable_silent_payments_scanning": "사일런트 페이먼트 주소로 전송된 트랜잭션 스캔 시작",
@@ -999,7 +1000,6 @@
   "transport_type": "전송 유형",
   "trongrid_history": "TronGrid 내역",
   "trusted": "신뢰됨",
-  "trusted_for_auto_switching": "자동 전환을 신뢰합니다",
   "try_again": "다시 시도하십시오",
   "tx_commit_exception_no_dust_on_change": "이 금액으로는 트랜잭션이 거부됩니다. 이 코인으로는 잔돈 없이 ${min}을(를) 보내거나 잔돈이 반환되는 ${max}을(를) 보낼 수 있습니다.",
   "tx_commit_failed": "트랜잭션 커밋 실패. 지원팀에 문의하세요.",
