--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -308,6 +308,7 @@
   "enable": "စွမ်းဆောင်နိုင်စေ",
   "enable_auto_node_switching": "အလိုအလျောက် node switching ကို enable",
   "enable_builtin_tor": "built-in Tor ကို Enable လုပ်ပါ",
+  "enable_for_auto_switching": "Auto-switching အတွက်ဖွင့်ပါ",
   "enable_mempool_api": "Mempool API တိကျသောအခကြေးငွေနှင့်ရက်စွဲများအတွက်",
   "enable_replace_by_fee": "အစားထိုး - by- အခကြေးငွေ enable",
   "enable_silent_payments_scanning": "အစွန်အဖျားသို့ရောက်ရှိသည်အထိအသံတိတ်ငွေပေးချေမှုကိုစကင်ဖတ်စစ်ဆေးပါ",
@@ -998,7 +999,6 @@
   "transport_type": "သယ်ယူပို့ဆောင်ရေးအမျိုးအစား",
   "trongrid_history": "Trongrid သမိုင်း",
   "trusted": "ယုံတယ်။",
-  "trusted_for_auto_switching": "Auto-switching အတွက်ယုံကြည်စိတ်ချရသည်",
   "try_again": "ထပ်ကြိုးစားပါ",
   "tx_commit_exception_no_dust_on_change": "အဆိုပါငွေပေးငွေယူကဒီပမာဏနှင့်အတူပယ်ချခံရသည်။ ဤဒင်္ဂါးပြားများနှင့်အတူပြောင်းလဲမှုကိုပြန်လည်ပြောင်းလဲခြင်းသို့မဟုတ် ${min} မပါဘဲ ${max} ပေးပို့နိုင်သည်။",
   "tx_commit_failed": "ငွေပေးငွေယူကျူးလွန်မှုပျက်ကွက်။ ကျေးဇူးပြုပြီးပံ့ပိုးမှုဆက်သွယ်ပါ။",
