--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -308,6 +308,7 @@
   "enable": "Habilitar",
   "enable_auto_node_switching": "Ativar comutação automática de nó",
   "enable_builtin_tor": "Ative o Buildi-in Tor",
+  "enable_for_auto_switching": "Ativar a troca automática",
   "enable_mempool_api": "Mempool API para taxas e datas precisas",
   "enable_replace_by_fee": "Habilite substituir por taxa",
   "enable_silent_payments_scanning": "Comece a escanear pagamentos silenciosos, até que o topo seja alcançada",
@@ -1000,7 +1001,6 @@
   "transport_type": "Tipo de transporte",
   "trongrid_history": "História de Trongrid",
   "trusted": "confiável",
-  "trusted_for_auto_switching": "Confie em troca automática",
   "try_again": "Tente novamente",
   "tx_commit_exception_no_dust_on_change": "A transação é rejeitada com esse valor. Com essas moedas, você pode enviar ${min} sem alteração ou ${max} que retorna alterações.",
   "tx_commit_failed": "A confirmação da transação falhou. Entre em contato com o suporte.",
