--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -308,6 +308,7 @@
   "enable": "Давать возможность",
   "enable_auto_node_switching": "Включить автоматическое переключение узлов",
   "enable_builtin_tor": "Включить встроенный в Tor",
+  "enable_for_auto_switching": "Включить для автоматического переключения",
   "enable_mempool_api": "Mempool API за точные сборы и даты",
   "enable_replace_by_fee": "Включить замену за пикой",
   "enable_silent_payments_scanning": "Начните сканировать безмолвные платежи, пока не будет достигнут наконечник",
@@ -999,7 +1000,6 @@
   "transport_type": "Транспортный тип",
   "trongrid_history": "История Тронгрида",
   "trusted": "доверенный",
-  "trusted_for_auto_switching": "Доверенный для автоматического переключения",
   "try_again": "Попробуйте еще раз",
   "tx_commit_exception_no_dust_on_change": "Транзакция отклоняется с этой суммой. С этими монетами вы можете отправлять ${min} без изменения или ${max}, которые возвращают изменение.",
   "tx_commit_failed": "Комплект транзакции не удался. Пожалуйста, свяжитесь с поддержкой.",
