--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -308,6 +308,7 @@
   "enable": "Ввімкнути",
   "enable_auto_node_switching": "Увімкнути автоматичний перемикач вузлів",
   "enable_builtin_tor": "Увімкнути вбудований tor",
+  "enable_for_auto_switching": "Увімкнути автоматичне перемикання",
   "enable_mempool_api": "API Mempool для точних зборів та дат",
   "enable_replace_by_fee": "Увімкнути заміну з комісією",
   "enable_silent_payments_scanning": "Почніть сканувати мовчазні платежі, поки не буде досягнуто наконечника",
@@ -999,7 +1000,6 @@
   "transport_type": "Транспортний тип",
   "trongrid_history": "Тронгрідська історія",
   "trusted": "довіряють",
-  "trusted_for_auto_switching": "Довіряють автоматичному перемиканні",
   "try_again": "Спробуйте ще раз",
   "tx_commit_exception_no_dust_on_change": "Транзакція відхилена цією сумою. За допомогою цих монет ви можете надіслати ${min} без змін або ${max}, що повертає зміни.",
   "tx_commit_failed": "Транзакційна комісія не вдалося. Будь ласка, зв'яжіться з підтримкою.",
