--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -308,6 +308,7 @@
   "enable": "قابل بنائیں",
   "enable_auto_node_switching": "خودکار نوڈ سوئچنگ کو فعال کریں",
   "enable_builtin_tor": "بلٹٹی ان ٹور کو فعال کریں",
+  "enable_for_auto_switching": "آٹو سوئچنگ کے لئے قابل بنائیں",
   "enable_mempool_api": "درست فیسوں اور تاریخوں کے لئے میمپول API",
   "enable_replace_by_fee": "فی فیس کو تبدیل کریں",
   "enable_silent_payments_scanning": "خاموش ادائیگیوں کو اسکین کرنا شروع کریں ، جب تک کہ نوک نہ پہنچ جائے",
@@ -1000,7 +1001,6 @@
   "transport_type": "ٹرانسپورٹ کی قسم",
   "trongrid_history": "ٹرانگریڈ ہسٹری",
   "trusted": "قابل اعتماد",
-  "trusted_for_auto_switching": "آٹو سوئچنگ کے لئے قابل اعتماد",
   "try_again": "دوبارہ کوشش کریں",
   "tx_commit_exception_no_dust_on_change": "اس رقم سے لین دین کو مسترد کردیا گیا ہے۔ ان سککوں کے ذریعہ آپ بغیر کسی تبدیلی کے ${min} یا ${max} بھیج سکتے ہیں جو لوٹتے ہیں۔",
   "tx_commit_failed": "ٹرانزیکشن کمٹ ناکام ہوگیا۔ براہ کرم سپورٹ سے رابطہ کریں۔",
