--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -307,6 +307,7 @@
   "enable": "Cho phép",
   "enable_auto_node_switching": "Bật chuyển đổi nút tự động",
   "enable_builtin_tor": "Bật Buildi-In Tor",
+  "enable_for_auto_switching": "Kích hoạt để chuyển đổi tự động",
   "enable_mempool_api": "API Mempool cho các khoản phí và ngày chính xác",
   "enable_replace_by_fee": "Bật Thay thế Bằng Phí",
   "enable_silent_payments_scanning": "Bật quét thanh toán im lặng",
@@ -995,7 +996,6 @@
   "transport_type": "Loại vận chuyển",
   "trongrid_history": "Lịch sử TronGrid",
   "trusted": "Đã tin cậy",
-  "trusted_for_auto_switching": "Đáng tin cậy cho việc chuyển đổi tự động",
   "try_again": "Hãy thử lại",
   "tx_commit_exception_no_dust_on_change": "Giao dịch bị từ chối với số tiền này. Với số tiền này bạn có thể gửi ${min} mà không cần đổi tiền lẻ hoặc ${max} trả lại tiền lẻ.",
   "tx_commit_failed": "Giao dịch không thành công. Vui lòng liên hệ với hỗ trợ.",
