--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -309,6 +309,7 @@
   "enable": "Mu ṣiṣẹ",
   "enable_auto_node_switching": "Mu oju-ọna yiyọ laifọwọyi",
   "enable_builtin_tor": "Mu ṣiṣẹ",
+  "enable_for_auto_switching": "Mu ṣiṣẹ fun adaṣe-pada",
   "enable_mempool_api": "Mempool API fun awọn owo deede ati awọn ọjọ",
   "enable_replace_by_fee": "Mu ki o rọpo",
   "enable_silent_payments_scanning": "Bẹrẹ awọn sisanwo ipalọlọ, titi ti o fi de opin",
@@ -999,7 +1000,6 @@
   "transport_type": "Iru irinna",
   "trongrid_history": "Itan Trongrid",
   "trusted": "A ti fọkàn ẹ̀ tán",
-  "trusted_for_auto_switching": "Gbẹkẹle fun yiyi kuro",
   "try_again": "Gbiyanju lẹẹkansi",
   "tx_commit_exception_no_dust_on_change": "Iṣowo naa ti kọ pẹlu iye yii. Pẹlu awọn owó wọnyi o le firanṣẹ ${min} laisi ayipada tabi ${max} ni iyipada iyipada.",
   "tx_commit_failed": "Idunadura iṣowo kuna. Jọwọ kan si atilẹyin.",
