--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -308,6 +308,7 @@
   "enable": "使能够",
   "enable_auto_node_switching": "启用自动节点开关",
   "enable_builtin_tor": "启用内置的tor",
+  "enable_for_auto_switching": "启用自动开关",
   "enable_mempool_api": "Mempool API获得准确的费用和日期",
   "enable_replace_by_fee": "启用by-Fee替换",
   "enable_silent_payments_scanning": "开始扫描无声付款，直到达到提示",
@@ -998,7 +999,6 @@
   "transport_type": "运输类型",
   "trongrid_history": "Trongrid历史",
   "trusted": "值得信赖",
-  "trusted_for_auto_switching": "信任自动转换",
   "try_again": "再试一次",
   "tx_commit_exception_no_dust_on_change": "交易被此金额拒绝。使用这些硬币，您可以发送${min}无需更改或返回${max}的变化。",
   "tx_commit_failed": "交易承诺失败。请联系支持。",
