--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -308,6 +308,7 @@
   "enable": "Inschakelen",
   "enable_auto_node_switching": "Schakel automatische knoopschakeling in",
   "enable_builtin_tor": "Schakel ingebouwde tor in",
+  "enable_for_auto_switching": "Inschakelen voor automatisch schakelen",
   "enable_mempool_api": "Mempool API voor nauwkeurige kosten en datums",
   "enable_replace_by_fee": "Schakel vervangen door een fee",
   "enable_silent_payments_scanning": "Begin met het scannen van stille betalingen, totdat de tip is bereikt",
@@ -998,7 +999,6 @@
   "transport_type": "Transporttype",
   "trongrid_history": "Trongrid geschiedenis",
   "trusted": "vertrouwd",
-  "trusted_for_auto_switching": "Vertrouwd voor auto-switching",
   "try_again": "Probeer het opnieuw",
   "tx_commit_exception_no_dust_on_change": "De transactie wordt afgewezen met dit bedrag. Met deze munten kunt u ${min} verzenden zonder verandering of ${max} die wijziging retourneert.",
   "tx_commit_failed": "Transactiebewissing is mislukt. Neem contact op met de ondersteuning.",
