--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -308,6 +308,7 @@
   "enable": "Włącz",
   "enable_auto_node_switching": "Włącz automatyczne przełączanie węzłów",
   "enable_builtin_tor": "Włącz wbudowany tor",
+  "enable_for_auto_switching": "Włącz do automatycznego przełączania",
   "enable_mempool_api": "Mempool API dla dokładnych opłat i dat",
   "enable_replace_by_fee": "Włącz wymianę po lewej",
   "enable_silent_payments_scanning": "Zacznij skanować Silent Payments",
@@ -998,7 +999,6 @@
   "transport_type": "Typ transportu",
   "trongrid_history": "Historia Trongrida",
   "trusted": "Zaufany",
-  "trusted_for_auto_switching": "Zaufany do automatycznego przełączania",
   "try_again": "Spróbuj ponownie",
   "tx_commit_exception_no_dust_on_change": "Transakcja została odrzucana z tą kwotą. Za pomocą tych monet możesz wysłać ${min} bez reszty lub ${max}, które zwrócą resztę.",
   "tx_commit_failed": "Zatwierdzenie transakcji nie powiodło się. Skontaktuj się z obsługą.",
