--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -308,6 +308,7 @@
   "enable": "เปิดใช้งาน",
   "enable_auto_node_switching": "เปิดใช้งานการสลับโหนดอัตโนมัติ",
   "enable_builtin_tor": "เปิดใช้งาน Tor ในตัว",
+  "enable_for_auto_switching": "เปิดใช้งานการสลับอัตโนมัติ",
   "enable_mempool_api": "Mempool API สำหรับค่าธรรมเนียมและวันที่ที่ถูกต้อง",
   "enable_replace_by_fee": "เปิดใช้งานการเปลี่ยนโดยค่าธรรมเนียม",
   "enable_silent_payments_scanning": "เริ่มสแกนการชำระเงินแบบเงียบจนกว่าจะถึงปลาย",
@@ -998,7 +999,6 @@
   "transport_type": "ประเภทการขนส่ง",
   "trongrid_history": "ประวัติศาสตร์ Trongrid",
   "trusted": "มั่นคง",
-  "trusted_for_auto_switching": "เชื่อถือได้สำหรับการสลับอัตโนมัติ",
   "try_again": "ลองอีกครั้ง",
   "tx_commit_exception_no_dust_on_change": "ธุรกรรมถูกปฏิเสธด้วยจำนวนเงินนี้ ด้วยเหรียญเหล่านี้คุณสามารถส่ง ${min} โดยไม่ต้องเปลี่ยนแปลงหรือ ${max} ที่ส่งคืนการเปลี่ยนแปลง",
   "tx_commit_failed": "การทำธุรกรรมล้มเหลว กรุณาติดต่อฝ่ายสนับสนุน",
