--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -308,6 +308,7 @@
   "enable": "Paganahin",
   "enable_auto_node_switching": "Paganahin ang awtomatikong paglipat ng node",
   "enable_builtin_tor": "Paganahin ang built-in tor",
+  "enable_for_auto_switching": "Paganahin para sa auto-switch",
   "enable_mempool_api": "Mempool API para sa tumpak na bayad at mga petsa",
   "enable_replace_by_fee": "Paganahin ang  Replace-By-Fee",
   "enable_silent_payments_scanning": "Simulan ang pag -scan ng tahimik na pagbabayad, hanggang sa maabot ang tip",
@@ -998,7 +999,6 @@
   "transport_type": "Uri ng transportasyon",
   "trongrid_history": "Kasaysayan ng TronGrid",
   "trusted": "Pinagkakatiwalaan",
-  "trusted_for_auto_switching": "Pinagkakatiwalaan para sa awtomatikong paglilipat",
   "try_again": "Subukang muli",
   "tx_commit_exception_no_dust_on_change": "Ang transaksyon ay tinanggihan sa halagang ito. Sa mga barya na ito maaari kang magpadala ng ${min} nang walang sukli o ${max} na nagbabalik ng sukli.",
   "tx_commit_failed": "Nabigo ang transaksyon. Mangyaring makipag-ugnay sa suporta.",
