--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -308,6 +308,7 @@
   "enable": "Olanak vermek",
   "enable_auto_node_switching": "Otomatik Düğüm Anahtarlamasını Etkinleştir",
   "enable_builtin_tor": "Yerleşik Tor'u etkinleştirin",
+  "enable_for_auto_switching": "Otomatik anahtarlama için etkinleştirin",
   "enable_mempool_api": "Doğru ücretler ve tarihler için Mempool API'si",
   "enable_replace_by_fee": "Farklı Değiştir'i Etkinleştir",
   "enable_silent_payments_scanning": "Bahşiş ulaşılıncaya kadar sessiz ödemeleri taramaya başlayın",
@@ -998,7 +999,6 @@
   "transport_type": "Taşıma tipi",
   "trongrid_history": "Trongrid tarihi",
   "trusted": "Güvenilir",
-  "trusted_for_auto_switching": "Otomatik anahtarlama için güvenilir",
   "try_again": "Tekrar deneyin",
   "tx_commit_exception_no_dust_on_change": "İşlem bu miktarla reddedilir. Bu madeni paralarla değişiklik yapmadan ${min} veya değişikliği döndüren ${max} gönderebilirsiniz.",
   "tx_commit_failed": "İşlem taahhüdü başarısız oldu. Lütfen Destek ile iletişime geçin.",
