spanish: miscellaneous fixes

--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -458,23 +458,23 @@
   "ledger_please_enable_bluetooth": "Habilita tu Bluetooth para detectar tu ledger",
   "legacy": "Legado",
   "light_theme": "Ligero",
-  "litecoin_enable_mweb_sync": "Habilitar el escaneo mweb",
+  "litecoin_enable_mweb_sync": "Habilitar el escaneo MWEB",
   "litecoin_mweb": "Mweb",
-  "litecoin_mweb_allow_coins": "Permitir monedas mweb",
-  "litecoin_mweb_always_scan": "Establecer mweb siempre escaneo",
+  "litecoin_mweb_allow_coins": "Permitir monedas MWEB",
+  "litecoin_mweb_always_scan": "Establecer escaneo permanente de MWEB",
   "litecoin_mweb_description": "Mweb es un nuevo protocolo que trae transacciones más rápidas, más baratas y más privadas a Litecoin",
   "litecoin_mweb_dismiss": "Despedir",
   "litecoin_mweb_display_card": "Mostrar tarjeta MWEB",
   "litecoin_mweb_enable": "Habilitar mweb",
   "litecoin_mweb_enable_later": "Puede elegir habilitar MWEB nuevamente en la configuración de visualización.",
-  "litecoin_mweb_logs": "Registros de mweb",
-  "litecoin_mweb_node": "Nodo mweb",
+  "litecoin_mweb_logs": "Registros de MWEB",
+  "litecoin_mweb_node": "Nodo MWEB",
   "litecoin_mweb_pegin": "Convertir",
   "litecoin_mweb_pegout": "Recuperar",
-  "litecoin_mweb_scanning": "Escaneo mweb",
+  "litecoin_mweb_scanning": "Escaneo MWEB",
   "litecoin_mweb_settings": "Configuración de MWEB",
   "litecoin_mweb_warning": "El uso de MWEB inicialmente descargará ~ 600 MB de datos, y puede tomar hasta 30 minutos según la velocidad de la red. Estos datos iniciales solo se descargarán una vez y estarán disponibles para todas las billeteras de Litecoin",
-  "litecoin_what_is_mweb": "¿Qué es mweb?",
+  "litecoin_what_is_mweb": "¿Qué es MWEB?",
   "live_fee_rates": "Tasas de tarifas en vivo a través de API",
   "load_more": "Carga más",
   "loading_your_wallet": "Cargando tu billetera",
@@ -511,8 +511,8 @@
   "moralis_nft_error": "Se produjo un error al alcanzar las NFT. Por favor, consulte su conexión a Internet y vuelva a intentarlo.",
   "more_options": "Más Opciones",
   "multiple_addresses_detected": "Múltiples direcciones detectadas",
-  "mweb_confirmed": "Confirmado mweb",
-  "mweb_unconfirmed": "Mweb no confirmado",
+  "mweb_confirmed": "MWEB confirmado",
+  "mweb_unconfirmed": "MWEB no confirmado",
   "name": "Nombre",
   "nano_current_rep": "Representante actual",
   "nano_gpt_thanks_message": "¡Gracias por usar nanogpt! ¡Recuerda regresar al navegador después de que se complete su transacción!",
@@ -800,7 +800,7 @@
   "sent": "Expedido",
   "service_health_disabled": "El boletín de salud del servicio está deshabilitado",
   "service_health_disabled_message": "Esta es la página del Boletín de Salud del Servicio, puede habilitar esta página en Configuración -> Privacidad",
-  "set_a_pin": "Poner un PIN",
+  "set_a_pin": "Establecer un PIN",
   "set_up_a_wallet": "Establecer una billetera",
   "settings": "Configuraciones",
   "settings_all": "TODOS",
